[gd_scene load_steps=2 format=3 uid="uid://cwsd5ysbvwbww"]

[ext_resource type="Script" uid="uid://dtg08dba76ja5" path="res://scenes/menu/menu.gd" id="1_klgdb"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klgdb")

[node name="setRes" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="2560x1440" type="Button" parent="setRes"]
layout_mode = 0
offset_right = 90.0
offset_bottom = 32.0
text = "2560x1440"

[node name="1920x1080" type="Button" parent="setRes"]
layout_mode = 0
offset_top = 32.0
offset_right = 90.0
offset_bottom = 64.0
text = "1920x1080"

[node name="1280x720" type="Button" parent="setRes"]
layout_mode = 0
offset_top = 64.0
offset_right = 81.0
offset_bottom = 96.0
text = "1280x720"

[node name="Fullscreen" type="Button" parent="setRes"]
layout_mode = 0
offset_top = 96.0
offset_right = 32.0
offset_bottom = 128.0
text = "FS"

[connection signal="pressed" from="setRes/2560x1440" to="." method="_on_x_1440_pressed"]
[connection signal="pressed" from="setRes/1920x1080" to="." method="_on_x_1080_pressed"]
[connection signal="pressed" from="setRes/1280x720" to="." method="_on_x_720_pressed"]
[connection signal="pressed" from="setRes/Fullscreen" to="." method="_on_fullscreen_pressed"]
